docs: atualiza coautenticação via swagger
